# sx127x

./: BuildForarmhf.cmake  CMakeLists.txt  LICENSE  README.md  builder.sh  mos.yml  toolchain.cmake
include/: linux_slrm.h  linux_sx127x.h  mgos_slrm.h  mgos_sx127x.h  slrm.h  stm_slrm.h  sx127x_hal.h
linux/: gpio.c  gpio.h  linux_sx127x.c  log.c  spi.c  timer.h
mgos/: mgos_sx127x.c  mgos_sx127x_hal.c
radio/: sx127x.c  sx127x.h  sx127x_drv.c  sx127x_drv.h  sx127x_getset.c  sx127x_hal.h  sx127x_internal.c  sx127x_internal.h
radio/linux/: gpio.c  gpio.h  linux_sx127x_hal.c  log.h  spi.c  spi.h  timer.c
radio/mgos/: mgos_sx127x_hal.c
radio/stm/: stm_sx127x_hal.c
slrm/: slrm.c
slrm/linux/: linux_slrm.c
slrm/mgos/: mgos_slrm.c
slrm/stm/: stm_slrm.c
src/: mgos_sx127x.c  mgos_sx127x_hal.c  sx127x.c  sx127x.h  sx127x_drv.c  sx127x_drv.h  sx127x_getset.c
src/sx127x/: sx127x.c  sx127x.h  sx127x_getset.c  sx127x_internal.c  sx127x_registers.h
tests/: CMakeLists.txt  linux-sx127x.c  mgos-sx127x.c  mos.yml
